# PlotterForDumbass

./: CMakeLists.txt  main.cpp
Implementation/: BaseDrawer.h  BasePoint1.h  BasePoint2.h  BasePoint3.h  XYPlotter.h
Implementation/Axis/: Axis2.h
Implementation/Drawer/: BaseDrawer.h
Implementation/Line/: Line2.h  Line3.h  LineSeries2.h
Implementation/Plotter/: XYPlotter.h
Implementation/Point/: BasePoint1.h  BasePoint2.h  BasePoint3.h
Interface/: Axis.h  Color.h  Drawer.h  Line.h  LineSeries.h  Plotter.h  Point.h  Renderable.h  Text.h
